add schema
